refactor: update TypeScript configuration and migrate to next.config.ts
chore: remove next.config.js and replace with next.config.ts for TypeScript support

chore: update package.json dependencies and scripts for improved compatibility

feat: add postcss configuration for Tailwind CSS integration

fix: enhance database initialization script to handle better-sqlite3 loading errors

test: refactor tests to support both better-sqlite3 and sql.js environments

test: improve accessibility tests for TaskForm and ThemeToggle components

test: reorganize e2e tests to separate Playwright tests from Bun tests

test: implement setup-db utility for managing database connections in tests

test: add JSDOM setup for testing environment to support DOM manipulation

style: clean up test files and ensure consistent formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: bun install
       - name: Lint
         run: bun run lint
-      - name: Run tests
+      - name: Run tests (Bun)
         run: bun test
       - name: Run Playwright
         uses: microsoft/playwright-github-action@v1
@@ -39,3 +39,18 @@ jobs:
         with:
           name: coverage
           path: coverage || ''
+
+  node-init:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install deps (npm)
+        run: npm ci
+      - name: Run Node init script
+        run: node scripts/init-db.node.js
+      - name: Run Node init test
+        run: node tests/init-db.node.test.js
