--- a/package.json
+++ b/package.json
@@ -3,47 +3,60 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bun run next dev",
-    "build": "bun run next build",
-    "start": "bun run next start",
-    "lint": "eslint . --ext .ts,.tsx --fix",
+    "dev": "bun --bun next dev",
+    "build": "bun --bun next build",
+    "start": "bun --bun next start",
+    "lint": "eslint app components lib scripts tests db types --ext .ts,.tsx --fix",
     "format": "prettier --write .",
     "test": "bun test",
     "test:unit": "bun test",
-    "test:e2e": "playwright test",
-    "e2e": "playwright test",
-    "ci": "bun install && bun test && npx playwright test",
+    "test:e2e": "playwright test tests/e2e/*.pw.spec.ts",
+    "e2e": "playwright test tests/e2e/*.pw.spec.ts",
+    "ci": "bun install && bun test && npx playwright test tests/e2e/*.pw.spec.ts",
     "migrate": "drizzle-kit migrate",
     "seed": "bun run scripts/seed.ts",
-    "prepare": "husky install"
+    "prepare": "husky",
+    "init-db:node": "node scripts/init-db.node.js"
   },
   "dependencies": {
-    "next": "16.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.7",
-    "framer-motion": "^8.0.0",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.30.0",
-    "react-hook-form": "^7.45.0",
-    "zod": "^3.22.0",
-    "fuse.js": "^6.6.2",
-    "drizzle-orm": "^0.27.0",
-    "better-sqlite3": "^8.0.0",
-    "uuid": "^9.0.0",
-    "@hookform/resolvers": "^3.1.0"
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwindcss": "^4.1.18",
+    "framer-motion": "^12.23.26",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "react-hook-form": "^7.68.0",
+    "zod": "^4.2.1",
+    "fuse.js": "^7.1.0",
+    "drizzle-orm": "^0.45.1",
+    "better-sqlite3": "^12.5.0",
+    "uuid": "^13.0.0",
+    "@hookform/resolvers": "^5.2.2",
+    "sql.js": "^1.13.0"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.30.0",
-    "typescript": "^5.2.0",
-    "lint-staged": "^13.0.0",
-    "eslint": "^8.0.0",
-    "prettier": "^2.8.0",
-    "husky": "^8.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@testing-library/react": "^14.0.0",
-    "@playwright/test": "^1.41.0"
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.57.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@testing-library/react": "^16.3.1",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/uuid": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "autoprefixer": "^10.4.23",
+    "@tailwindcss/postcss": "^4.1.18",
+    "drizzle-kit": "^0.31.8",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "jsdom": "^27.3.0",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
