feat: enhance Playwright tests and database initialization with sample data seeding

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "format": "prettier --write .",
     "test": "bun test",
     "test:unit": "bun test",
-    "test:e2e": "playwright test tests/e2e/*.pw.spec.ts",
-    "e2e": "playwright test tests/e2e/*.pw.spec.ts",
-    "ci": "bun install && bun test && npx playwright test tests/e2e/*.pw.spec.ts",
+    "test:e2e": "PW_TEST=1 playwright test tests/e2e/*.pw.spec.ts",
+    "e2e": "PW_TEST=1 playwright test tests/e2e/*.pw.spec.ts",
+    "ci": "bun install && bun test && PW_TEST=1 npx playwright test tests/e2e/*.pw.spec.ts",
     "migrate": "drizzle-kit migrate",
     "seed": "bun run scripts/seed.ts",
     "prepare": "husky",
