ci: run build with    ▲ Next.js 16.0.10 (Turbopack)    - Environments: .env
   Creating an optimized production build ...
 ✓ Compiled successfully in 1496.9ms
   Running TypeScript ...
   Collecting page data using 9 workers ...
Loaded database from ./db/data.db (using sql.js)
Loaded database from ./db/data.db (using sql.js)
Loaded database from ./db/data.db (using sql.js)
Loaded database from ./db/data.db (using sql.js)
Loaded database from ./db/data.db (using sql.js)
Loaded database from ./db/data.db (using sql.js)
Loaded database from ./db/data.db (using sql.js)
   Generating static pages using 9 workers (0/11) ...
   Generating static pages using 9 workers (2/11)
   Generating static pages using 9 workers (5/11)
Loaded database from ./db/data.db (using sql.js)
   Generating static pages using 9 workers (8/11)
 ✓ Generating static pages using 9 workers (11/11) in 318.4ms
   Finalizing page optimization ...

Route (app)
┌ ○ /
├ ○ /_not-found
├ ƒ /api/attachments
├ ƒ /api/debug
├ ƒ /api/labels
├ ƒ /api/lists
├ ƒ /api/search
├ ƒ /api/stats
├ ƒ /api/tasks
├ ƒ /api/tasks/[id]/activity
├ ○ /app
├ ƒ /app/lists/[listId]
└ ƒ /app/tasks/[taskId]

○  (Static)   prerendered as static content
ƒ  (Dynamic)  server-rendered on demand and init DB before Playwright

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,14 @@ jobs:
         run: bun test
       - name: Run Playwright
         uses: microsoft/playwright-github-action@v1
+      - name: Init DB (Node)
+        run: node scripts/init-db.node.js
       - name: Run E2E tests
+        env:
+          PW_TEST: '1'
         run: npx playwright test --reporter=list
       - name: Build
-        run: bun run next build
+        run: bun run build
       - name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v4
