--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "jsdom": "^27.3.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "@testing-library/dom": "^8.19.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
