--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
           node-version: '20.9.0'
       - name: Run Playwright
         uses: microsoft/playwright-github-action@v1
+      - name: Ensure Node >=20.9.0 for E2E step
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.9.0'
       - name: Run E2E tests
         env:
           PW_TEST: '1'
