--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.9.0'
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
       - name: Run E2E tests
         env:
           PW_TEST: '1'
