--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,18 +35,24 @@ jobs:
           node-version: '20.9.0'
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
+      - name: Build
+        run: bun run build
       - name: Run E2E tests
         env:
           PW_TEST: '1'
-        run: npx playwright test --reporter=list
-      - name: Build
-        run: bun run build
+        run: npx playwright test --reporter=list,html --retries=1
       - name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
+      - name: Upload Playwright traces
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-traces
+          path: test-results/**
       - name: Archive coverage
         if: always()
         uses: actions/upload-artifact@v4
