--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,12 @@ jobs:
           node-version: '20.9.0'
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
-      - name: Build
-        run: bun run build
+      - name: Ensure Node >=20.9.0 for build
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.9.0'
+      - name: Build (Node)
+        run: node ./node_modules/next/dist/bin/next build
       - name: Run E2E tests
         env:
           PW_TEST: '1'
